<resources>
    <string name="app_name">Zineb Regoui Kotlin Assignement 02</string>
    <string name="login">Login</string>
    <string name="welcome_to_our_plant_world">WELCOME TO OUR PLANT WORLD</string>
    <string name="no_account_sign_up">No account? Sign up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="app_logo">app logo</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="you_have_an_account_login">You have an account? Login</string>
    <string name="create">Create</string>
    <string name="enter_you_phone_number">Enter you phone number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="hello_again_farmer">HELLO AGAIN FARMER!</string>
    <string name="hello_welcome_back_farmer">HELLO, WELCOME BACK FARMER</string>
    <string name="made_by_zineb_regoui">Made By Zineb Regoui</string>
    <string name="plant_s_world">PLANT\'S WORLD</string>
    <string name="home_logo">home logo</string>
    <string name="hello_farmer">HELLO FARMER!</string>
    <string name="click_here_to_access_the_drawer_page">Click here to access the Drawer page</string>
    <string name="click_here_to_display_toast_message">Click here to display Toast message</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="this_is_our_home_page">This is our home page</string>
    <string name="open">open</string>
    <string name="close">close</string>
</resources>