<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">
        <ImageView
            android:id="@+id/logoPlant"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="30sp"
            android:layout_marginTop="40sp"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/house_icon_129523"
            android:contentDescription="@string/home_logo"/>

        <TextView
            android:id="@+id/HomeTitleID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/logoPlant"
            android:text="@string/hello_farmer"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="@font/rubik"/>

        <TextView
            android:id="@+id/homepageID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20sp"
            android:layout_below="@+id/HomeTitleID"
            android:text="@string/this_is_our_home_page"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/rubik"/>

        <TextView
            android:id="@+id/clickHereID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40sp"
            android:layout_below="@+id/homepageID"
            android:text="@string/click_here_to_display_toast_message"
            android:textSize="15sp"
            android:textStyle="bold"
            android:fontFamily="@font/rubik"/>

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/menu"/>



</androidx.drawerlayout.widget.DrawerLayout>