<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90EE90"
    android:padding="20sp"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:id="@+id/logoPlant"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginBottom="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/plant_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/loginTitleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoPlant"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20sp"
        android:text="@string/plant_s_world"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textStyle="italic"/>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginTitleID"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:indeterminateTint="#ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/made_by_zineb_regoui"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/white"/>

</RelativeLayout>